--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="col-xs-8 center-block" style="float:none;">
             <center>
                 <h1>OERu Partners</h1>
-
+<p>Data extracted from <a href="http://wikieducator.org/OERF:Home">http://wikieducator.org/OERF:Home</a></p>
             </center>
         </div>
 
@@ -65,48 +65,20 @@
 
                <div class="ext_search" data-ex-role="exhibit-facet" data-ex-facet-class="TextSearch" data-ex-facet-label="Search event">
                 </div>
-
                 <div data-ex-role="exhibit-facet" data-ex-expression=".country" data-ex-facet-label="Country" data-ex-show-missing="false" data-ex-scroll="true" data-ex-height="24em" data-ex-sort-mode="count" data-ex-collapsible="true"></div>
-
-
-
             </div>
 
             <div class="col-md-9">
               <div data-ex-role="exhibit-viewPanel">
-
-
-
-
                 <div data-ex-role="view" data-ex-view-class="Map" data-ex-label="Map" data-ex-latlng=".latlon" data-ex-map-height="480" data-ex-show-tool-box="true" data-ex-center="25,0" data-ex-color-key=".type_partner" >
                 </div>
-
-
-
             </div>
         </div>
         <footer>
-            By @lmorillas. Source code: <a href="https://github.com/lmorillas/python_events">https://github.com/lmorillas/python_events</a>
+            By @lmorillas. Source code: <a href="https://github.com/lmorillas/oeru">https://github.com/lmorillas/oeru</a>
         </footer>
 
     </div>
-
-    <script>
-    (function(i, s, o, g, r, a, m) {
-        i['GoogleAnalyticsObject'] = r;
-        i[r] = i[r] || function() {
-            (i[r].q = i[r].q || []).push(arguments)
-        }, i[r].l = 1 * new Date();
-        a = s.createElement(o),
-            m = s.getElementsByTagName(o)[0];
-        a.async = 1;
-        a.src = g;
-        m.parentNode.insertBefore(a, m)
-    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-
-    ga('create', 'UA-1734348-13', 'auto');
-    ga('send', 'pageview');
-    </script>
 </body>
 
 </html>
