--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@
         <div class="row">
             <div class="col-md-3">
 
-               <div class="ext_search" data-ex-role="exhibit-facet" data-ex-facet-class="TextSearch" data-ex-facet-label="Search event">
+               <div class="ext_search" data-ex-role="exhibit-facet" data-ex-facet-class="TextSearch" data-ex-facet-label="Search partner">
                 </div>
                 <div data-ex-role="exhibit-facet" data-ex-expression=".country" data-ex-facet-label="Country" data-ex-show-missing="false" data-ex-scroll="true" data-ex-height="24em" data-ex-sort-mode="count" data-ex-collapsible="true"></div>
             </div>
 
             <div class="col-md-9">
               <div data-ex-role="exhibit-viewPanel">
-                <div data-ex-role="view" data-ex-view-class="Map" data-ex-label="Map" data-ex-latlng=".latlon" data-ex-map-height="480" data-ex-show-tool-box="true" data-ex-center="25,0" data-ex-color-key=".type_partner" >
+                <div data-ex-role="view" data-ex-view-class="Map" data-ex-label="Map" data-ex-latlng=".latlon" data-ex-map-height="480" data-ex-show-tool-box="true" data-ex-center="25,30" data-ex-color-key=".type_partner" >
                 </div>
             </div>
         </div>
