--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 
@@ -37,9 +36,8 @@
     .exhibit-facet-value {
         font-size: smaller;
     }
-
     div.exhibit-legendWidget > div.exhibit-color-legend > div > div > span.label {
-           color: black;
+        color: black;
     }
     </style>
 
@@ -49,36 +47,64 @@
     });
     </script>
 </head>
+
 <body>
 
 
     <div class="container-fluid">
-        <div class="col-xs-8 center-block" style="float:none;">
-            <center>
-                <h1>OERu Partners</h1>
-<p>Data extracted from <a href="http://wikieducator.org/OERF:Home">http://wikieducator.org/OERF:Home</a></p>
-            </center>
+        <div class="col-xs-8 center-block" style="float:none; text-align:center" >
+
+            <h1>OERu Partners</h1>
+            <p>Data extracted from <a href="http://wikieducator.org/OERF:Home">http://wikieducator.org/OERF:Home</a>.  <a href="http://oeru.org/prospective-partners/">Join OERu</a></p>
+
         </div>
 
         <div class="row">
             <div class="col-md-3">
 
-               <div class="ext_search" data-ex-role="exhibit-facet" data-ex-facet-class="TextSearch" data-ex-facet-label="Search partner">
+                <div class="ext_search" data-ex-role="exhibit-facet" data-ex-facet-class="TextSearch" data-ex-facet-label="Search partner">
                 </div>
                 <div data-ex-role="exhibit-facet" data-ex-expression=".country" data-ex-facet-label="Country" data-ex-show-missing="false" data-ex-scroll="true" data-ex-height="24em" data-ex-sort-mode="count" data-ex-collapsible="true"></div>
             </div>
 
             <div class="col-md-9">
-              <div data-ex-role="exhibit-viewPanel">
-                <div data-ex-role="view" data-ex-view-class="Map" data-ex-label="Map" data-ex-latlng=".latlon" data-ex-map-height="480" data-ex-show-tool-box="true" data-ex-center="25,30" data-ex-color-key=".type_partner" >
+                <div data-ex-role="exhibit-viewPanel">
+
+                <div data-ex-role="lens" class="a-lens" style="display: none;">
+                    <div class="title"><strong><a data-ex-href-content=".url"><span data-ex-content=".label"></span>
+                    </a></strong>
+                    </div>
+
+                    <table class="details table table-striped">
+                        <tr>
+                            <td class="property">Country:</td>
+                            <td>
+                                <span data-ex-content=".country"></span>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="property">Parter type:</td>
+                            <td>
+                                <span data-ex-content=".type_partner"></span>
+                            </td>
+                        </tr>
+
+                        <tr data-ex-if-exists=".url">
+                            <td class="property">More info</td>
+                            <td><a data-ex-href-content=".url"><span data-ex-content=".url"></span></a>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                    <div data-ex-role="view" data-ex-view-class="Map" data-ex-label="Map" data-ex-latlng=".latlon" data-ex-map-height="480" data-ex-show-tool-box="true" data-ex-center="25,30" data-ex-color-key=".type_partner">
+                    </div>
                 </div>
             </div>
-        </div>
-        <footer>
-            By @lmorillas. Source code: <a href="https://github.com/lmorillas/oeru">https://github.com/lmorillas/oeru</a>
-        </footer>
+            <footer>
+                By @lmorillas. Source code: <a href="https://github.com/lmorillas/oeru">https://github.com/lmorillas/oeru</a>
+            </footer>
 
-    </div>
+        </div>
 </body>
 
 </html>
