typo with view and course sort

--- a/courses.html
+++ b/courses.html
@@ -74,6 +74,9 @@
 
             <div class="col-md-6">
                 <div data-ex-role="exhibit-viewPanel">
+                <div data-ex-role="view" data-ex-label="Course List"
+                            data-ex-show-all="true" data-ex-orders=".label"
+                >
 
                     <div data-ex-role="lens" class="a-lens" style="display: none;">
                         <div class="title"><strong><a data-ex-href-content=".url"><span data-ex-content=".label"></span>
@@ -100,6 +103,7 @@
                                 </td>
                             </tr>
                         </table>
+                    </div>
                     </div>
                 </div>
 
