--- a/courses.html
+++ b/courses.html
@@ -109,10 +109,12 @@
 
             </div>
             <div class="col-md-3">
+                <div data-ex-role="exhibit-facet" data-ex-expression=".starts" data-ex-facet-label="Start" data-ex-show-missing="false" data-ex-scroll="true" data-ex-collapsible="true" data-ex-height="8em"></div>
                 <div data-ex-role="exhibit-facet" data-ex-expression=".credentialing" data-ex-facet-label="Credentialing" data-ex-show-missing="false" data-ex-scroll="true" data-ex-collapsible="true" data-ex-height="4em"></div>
                 <div data-ex-role="exhibit-facet" data-ex-expression=".weeks" data-ex-facet-label="Weeks" data-ex-show-missing="false" data-ex-scroll="true" data-ex-collapsible="true" data-ex-height="8em"></div>
                 <div data-ex-role="exhibit-facet" data-ex-expression=".hpw" data-ex-facet-label="Hours per week" data-ex-show-missing="false" data-ex-scroll="true" data-ex-collapsible="true" data-ex-height="8em"></div>
             </div>
+
         </div>
 
         <footer>
